added drawing of masks

--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
               <h5 class="indigo-text text-darken-4">Ciphertext </h5>
               <p id="ciphertext"></p>
             </div>
-
+			
+			
+    <canvas id="canvas_mask0" class="hide" width="420px" height="420px" style="background: #fff;     magrin:20px;"></canvas>
+	<canvas id="canvas_mask1" class="hide" width="420px" height="420px" style="background: #fff;     magrin:20px;"></canvas>
+	<canvas id="canvas_mask2" class="hide" width="420px" height="420px" style="background: #fff;     magrin:20px;"></canvas>
+	<canvas id="canvas_mask3" class="hide" width="420px" height="420px" style="background: #fff;     magrin:20px;"></canvas>
+      
         </div>
 
         <div id="decrypt" class="section scrollspy">
