fixed drawing of masks and length of ciphertext

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div id="ciphertext_card" class="card-panel hide">
               <h5 class="indigo-text text-darken-4">Ciphertext </h5>
-              <p id="ciphertext"></p>
+              <p id="ciphertext" class="flow-text"></p>
             </div>
 			
 			
