added decryption with custom key

--- a/index.html
+++ b/index.html
@@ -76,21 +76,12 @@
 		  <div id="size_key_div" class="input-field col s6 hide">
             <i class="material-icons prefix">edit</i>
             <input id="size_key_input" type="text" class="validate">
-            <label for="icon_prefix">Size</label>
+            <label for="icon_prefix">Size of matrix</label>
           </div>
 		 
 		  
-		 <div id="custom_key" class="col s12 center-align">
-		 <h4> Custom key </h4>
-			<p>
-			  <input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
-			  <label for="filled-in-box"></label>
-			  
-			  <input type="checkbox" class="filled-in" id="filled-in-box1" checked="checked" />
-			  <label for="filled-in-box1"></label>
-			  <input type="checkbox" class="filled-in" id="filled-in-box2" checked="checked" />
-			  <label for="filled-in-box2"></label>
-			</p>
+		 <div id="custom_key" class="col s12 center-align hide">
+		
 		</div>
   
 		 <div class="col s12"> 
