--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link type="text/css" rel="stylesheet" href="css/turning.css"  media="screen,projection"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Turning Grille</title>
 </head>
 
@@ -16,13 +17,14 @@
     <li><a href="#encrypt"><i class="material-icons">lock</i>Encrypt</a></li>
     <li><a href="#decrypt"><i class="material-icons">lock_open</i>Decrypt</a></li>
     <li><div class="divider"></div></li>
-    <li><a href="#authors" class="subheader">Authors</a></li>
+    <li><a href="#authors">Authors</a></li>
   </ul>
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
   <main>
     <div class="row">
       <div class="col s12 m9 l10">
+	  
         <div id="encrypt" class="section scrollspy">
           <h2 class="light-blue-text text-darken-4"> Encrypt </h2>
           <div class="divider"></div>
@@ -35,25 +37,25 @@
             <i class="material-icons right">send</i>
           </button>
 
-            <div id="ciphertext_card" class="card-panel hide">
+            <div id="ciphertext_card" class="card-panel z-depth-3 hide">
               <h5 class="indigo-text text-darken-4">Ciphertext </h5>
               <p id="ciphertext" class="flow-text"></p>
             </div>
 			
 		<div id="div_masks" class="center-align hide">
 		<h4>Key</h4>
-		<canvas id="canvas_mask3" width="420px" height="420px" style="background: #fff;     magrin:20px;"></canvas>
+		<canvas id="canvas_mask_key" width="420px" height="420px" style="background: #fff; magrin:20px;"></canvas>
 		<h4>Rotation 1</h4>
-		<canvas id="canvas_mask0" width="420px" height="420px" style="background: #fff;     magrin:20px;"></canvas>
+		<canvas id="canvas_mask0" width="420px" height="420px" style="background: #fff; magrin:20px;"></canvas>
 		<h4>Rotation 2</h4>
-		<canvas id="canvas_mask1" width="420px" height="420px" style="background: #fff;     magrin:20px;"></canvas>
+		<canvas id="canvas_mask1" width="420px" height="420px" style="background: #fff; magrin:20px;"></canvas>
 		<h4>Rotation 3</h4>
-		<canvas id="canvas_mask2" width="420px" height="420px" style="background: #fff;     magrin:20px;"></canvas>
+		<canvas id="canvas_mask2" width="420px" height="420px" style="background: #fff; magrin:20px;"></canvas>
+		<h4>Rotation 4</h4>
+		<canvas id="canvas_mask3" width="420px" height="420px" style="background: #fff; magrin:20px;"></canvas>
 		</div>
 		
-      
-        </div>
-
+	  </div>
         <div id="decrypt" class="section scrollspy">
           <h2 class="light-blue-text text-darken-4"> Decrypt </h2>
           <div class="divider"></div>
@@ -90,15 +92,21 @@
           </button>
 		  </div>
 
-		  <div id="plaintext_card" class="col s12 card-panel hide">
+		  <div id="plaintext_card" class="col s12 card-panel z-depth-3 hide">
 			<h5 class="indigo-text text-darken-4">Plaintext </h5>
-			<p id="plaintext"></p>
+			<p id="plaintext" class="flow-text"></p>
 		  </div>
         </div>
 
         <div id="authors" class="section scrollspy col s12">
           <h4 class="light-blue-text text-darken-4"> Authors </h4>
           <div class="divider"></div>
+		  <div class="col s2"><img id="escudo" src="img/escudo.jpg" class="left-align responsive-img"/></div>
+		  <div class="col s10">
+		  <p>Hugo Alejandro Arias Zamora </p>
+		  <p>Oscar De Ángel Jiménez </p>
+		  <p>Ana María Rodríguez Reyes </p>
+		  </div>
         </div>
       </div>
     </div>
