changed path of DES

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       <ul id="dropdown1" class="dropdown-content">
         <li><a href="turning.html">Turning grille</a></li>
         <li><a href="cfb.html">CFB Mode</a></li>
-        <li><a href="des.html">DES</a></li>
+        <li><a href="DES.html">DES</a></li>
         <li><a href="aes.html">AES</a></li>
       </ul>
       
       <ul id="dropdown2" class="dropdown-content">
         <li><a href="turning.html">Turning grille</a></li>
         <li><a href="cfb.html">CFB Mode</a></li>
-        <li><a href="des.html">DES</a></li>
+        <li><a href="DES.html">DES</a></li>
         <li><a href="aes.html">AES</a></li>
       </ul>
 
