--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <li><a href="turning.html">Turning grille</a></li>
         <li><a href="cfb.html">CFB Mode</a></li>
         <li><a href="DES.html">DES</a></li>
-        <li><a href="aes.html">AES</a></li>
+        <li><a href="AES.html">AES</a></li>
       </ul>
       
       <ul id="dropdown2" class="dropdown-content">
         <li><a href="turning.html">Turning grille</a></li>
         <li><a href="cfb.html">CFB Mode</a></li>
         <li><a href="DES.html">DES</a></li>
-        <li><a href="aes.html">AES</a></li>
+        <li><a href="AES.html">AES</a></li>
       </ul>
 
       <nav>
@@ -43,7 +43,13 @@
     </header>
     <main>
 
-      <div class="row">
+	
+	
+  <div class="parallax-container">
+    <div class="parallax"><img src="img/background1.jpg"></div>
+  </div>
+  
+    <div class="row">
         <div class="col s12">
 
           <div class="section white">
@@ -56,6 +62,10 @@
         </div>
       </div>
 
+  <div class="parallax-container">
+    <div class="parallax"><img src="img/background2.jpg"></div>
+  </div>
+      
     </main>
 
     <footer class="page-footer white">
@@ -82,7 +92,6 @@
 
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <!--<script src="js/turning.js"></script>-->
     <script src="js/home.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
   </body>
