added home link and fixed js in AES and DES

--- a/cfb.html
+++ b/cfb.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.datatables.net/1.10.12/css/dataTables.material.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8">
-  <title>Turning Grille</title>
+  <title>CFB</title>
 </head>
 
 <body>
@@ -19,6 +19,7 @@
     <li><a href="#encrypt"><i class="material-icons">lock</i>Encrypt</a></li>
     <li><a href="#decrypt"><i class="material-icons">lock_open</i>Decrypt</a></li>
     <li><div class="divider"></div></li>
+	<li><a href="index.html"><i class="material-icons">home</i>Home</a></li>
   </ul>
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
