--- a/AES.html
+++ b/AES.html
@@ -18,6 +18,7 @@
     <li><a href="#encrypt"><i class="material-icons">lock</i>Encrypt</a></li>
     <li><a href="#decrypt"><i class="material-icons">lock_open</i>Decrypt</a></li>
     <li><div class="divider"></div></li>
+	<li><a href="index.html"><i class="material-icons">home</i>Home</a></li>
   </ul>
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
@@ -94,7 +95,7 @@
 			  
 			  <div class="input-field col s12">
 				<i class="material-icons prefix">edit</i>
-				<input id="customiv_input" type="text" class="validate">
+				<input id="customiv_input" type="text" class="validate" required>
 				<label for="icon_prefix">Custom IV</label>
 			  </div>
 			  
