--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
           <a href="#!" class="brand-logo">&nbsp;Crypto UN</a>
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="about.html">About us</a></li>
+            <li><a href="#authors">About us</a></li>
             <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Algorithms<i class="material-icons right">arrow_drop_down</i></a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
-            <li><a href="about.html">About us</a></li>
+            <li><a href="#authors">About us</a></li>
             <li><a id="a" class="dropdown-button" href="#!" data-activates="dropdown2">Algorithms<i class="material-icons right">arrow_drop_down</i></a></li>
           </ul>
         </div>
