--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
         <li><a href="cfb.html">CFB Mode</a></li>
         <li><a href="DES.html">DES</a></li>
         <li><a href="AES.html">AES</a></li>
+        <li><a href="UCA.html">UCA</a></li>
+        <li><a href="UCAR.html">UCAR</a></li>
       </ul>
-      
+
       <ul id="dropdown2" class="dropdown-content">
         <li><a href="turning.html">Turning grille</a></li>
         <li><a href="cfb.html">CFB Mode</a></li>
         <li><a href="DES.html">DES</a></li>
         <li><a href="AES.html">AES</a></li>
+        <li><a href="UCA.html">UCA</a></li>
+        <li><a href="UCAR.html">UCAR</a></li>
       </ul>
 
       <nav>
@@ -43,12 +47,12 @@
     </header>
     <main>
 
-	
-	
+
+
   <div class="parallax-container">
     <div class="parallax"><img src="img/background1.jpg"></div>
   </div>
-  
+
     <div class="row">
         <div class="col s12">
 
@@ -65,7 +69,7 @@
   <div class="parallax-container">
     <div class="parallax"><img src="img/background2.jpg"></div>
   </div>
-      
+
     </main>
 
     <footer class="page-footer white">
